2002-03-13  Alex Graveley  <alex@ximian.com>

	* src/soup-httpd/soup-httpd.c (ap_ctx_get): Add stub so
	soup-apache modules an be run by soup-httpd.
	(ap_get_server_port): Ditto.

	* src/soup-wsdl/wsdl-soap-skels.c (wsdl_emit_soap_skels_service):
	Generate the _get_server function, which returns a SoupServer
	representing the protocol/port defined in the WSDL file.

	* tests/stockquote2-mod-server.sh: Added.  Runs soup-httpd using
	the libstockquote2.so module generated from
	tests/stockquote2-mod-server.c

	* tests/stockquote2-mod-server.c: Update for new API generated by
	soup-wsdl.

	* tests/mod-server-test.c (soup_server_init): Update for new
	soup_server_register API.

2002-03-13  Alex Graveley  <alex@ximian.com>

	* tests/stockquote2-client.c (callback): Check for transport
	error.

	* src/libsoup/soup-env.c (soup_env_get_header): Handle fully
	qualified header names in URL form.

2002-03-13  Alex Graveley  <alex@ximian.com>

	* src/soup-wsdl/wsdl-soap-stubs.c (emit_sync_stub): #if 0 out
	generated code to use overridden URL in requests.

	* src/libsoup/soup-env.c (copy_header): Make static.

	* src/libsoup/soup-env.h: Fix macros.

	* tests/stockquote2-client.c: Update for new client API.

2002-03-13  Alex Graveley  <alex@ximian.com>

	* tests/stockquote2-server.c: Update for new server API.

	* tests/server-test.c (soup_server_init): Use auth_callback to
	validate requests to /hello.

2002-03-13  Alex Graveley  <alex@ximian.com>

	* src/libwsdl/wsdl-soap-parse.c (wsdl_soap_headers): Use
	soup_env_add_recv_header to add the new header to the incoming
	headers.

2002-03-12  Alex Graveley  <alex@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_get_iochannel):
	Loop on SSL_connect for some buggy versions of OpenSSL that still
	return SSL_ERROR_WANT_READ/WRITE even for syncronous sockets.
	Thanks to Chris Toshok for finding this.

2002-03-11  Alex Graveley  <alex@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Bump development